# class-pulse

./: .dockerignore  .env.example  .gitignore  404.html  DEMO.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  app.py  app.py.bak  classpulse.db-shm  classpulse.db-wal  classpulse.service  config.py  deploy_docs.sh  docker-compose.deploy.yml  docker-compose.yml  extensions.py  index.html  migrate_db.py  mkdocs.yml  models.py  package-lock.json  package.json  prompt.txt  pyproject.toml  requirements.txt  run.py  setup_docs.sh  start.sh  tailwind.config.js  utils.py  wsgi.py
.github/workflows/: docker-publish.yml  docs.yml
API_REFERENCE/: index.html
ARCHITECTURE/: index.html
DATA_FLOW/: index.html
DEVELOPER_GUIDE/: index.html
GETTING_STARTED/: index.html
SPECIFICATION/: index.html
classpulse/: __init__.py  accounts.py  admin.py  ai.py  audience.py  auth.py  email.py  extensions.py  models.py  moderation.py  presenter.py  proposals.py  questions.py  sockets.py  stats.py  uploads.py  utils.py
controllers/: audience_routes.py  auth_routes.py  presenter_routes.py  question_routes.py  websocket_routes.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  DATA_FLOW.md  DEVELOPER_GUIDE.md  GETTING_STARTED.md  README.md  SPECIFICATION.md  cp-design.html  cp-project-overview.html  cp-step1.html  cp-step2.html  cp-step3.html  cp-step4.html  cp-step5.html  index.html  index.md
models/: schema.py
scripts/: generate-secrets.sh  reset-password.sh
search/: search_index.json
static/css/: style.css  styles.css  tailwind.css
static/js/: audience.js  main.js  presenter.js  theme.js
static/src/: input.css
templates/: account.html  admin_users.html  ai_settings.html  audience_view.html  create_question.html  dashboard.html  forgot_password.html  join.html  landing.html  layout.html  login.html  participate.html  present.html  present_mode.html  question_new.html  question_results.html  register.html  reset_password.html  session_manage.html  session_new.html  sessions_archived.html  sessions_list.html  verify_email.html
tests/: conftest.py  test_accounts.py  test_audience.py  test_auth.py  test_authoring_api.py  test_email_flow.py  test_hardening.py  test_ownership.py  test_proposals.py  test_sockets.py  test_uploads.py
utils/: auth.py  components.py  qrcode.py  session_manager.py
