[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "classpulse"
version = "0.2.0"
description = "Real-time audience engagement web application"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "ClassPulse Team"}
]
# Pinned versions live in requirements.txt (the deployment manifest); these
# are the loose library-style bounds.
dependencies = [
    "flask>=3.0",
    "flask-sqlalchemy>=3.1",
    "flask-socketio>=5.5",
    "flask-wtf>=1.2",
    "flask-limiter>=3.8",
    "pillow>=10.0",
    "qrcode>=7.4",
    "requests>=2.32",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

prod = [
    "gunicorn>=22.0",
    "psycopg2-binary>=2.9.5",
]

[tool.ruff]
target-version = "py39"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "instance",
    "node_modules",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["flask.url_for", "flask.render_template"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = [".", "tests"]

[tool.coverage.run]
source = ["classpulse"]
omit = ["tests/*"]

[tool.hatch.build.targets.wheel]
packages = ["classpulse"]
